Revert "Update dependencies and add validation middleware"
This reverts commit 64a95c081fe7522a14cc2100fa68e1b1dee38899.
